--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
+  --background-end-rgb: 255, 255, 255;
   --background-end-rgb: 255, 255, 255;
 }
 
@@ -16,15 +16,22 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+
+/*Set the flexboxes and min heights so that elements can takeup all the space!*/
+html {
 }
+
+header {
+  @apply bg-blue-500 h-screen flex flex-col justify-between p-12 sticky top-0 float-left max-w-2/5 w-2/5 phonesize:w-full phonesize:max-w-full phonesize:relative;
+}
+
+body {
+}
+
+main {
+  @apply flex-grow flex flex-col justify-around p-12 overflow-scroll max-w-3/5 w-3/5 phonesize:w-full phonesize:max-w-full;
+}
+
 
 @layer utilities {
   .text-balance {
