--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,18 +18,29 @@
 
 
 /*Set the flexboxes and min heights so that elements can takeup all the space!*/
-html {
-}
-
 header {
   @apply bg-blue-500 h-screen flex flex-col justify-between p-12 sticky top-0 float-left max-w-2/5 w-2/5 phonesize:w-full phonesize:max-w-full phonesize:relative;
 }
 
-body {
-}
-
 main {
   @apply flex-grow flex flex-col justify-around p-12 max-w-3/5 w-3/5 phonesize:w-full phonesize:max-w-full;
+}
+
+h1 {
+  @apply text-4xl font-bold;
+}
+
+h2 {
+  @apply text-2xl font-semibold;
+}
+
+h3 {
+  @apply text-xl font-medium;
+}
+
+
+.hover-button {
+  @apply row-start-1 p-4 rounded transition ease-in-out delay-150 bg-transparent hover:-translate-y-1 hover:scale-100 hover:bg-violet-400 duration-300;
 }
 
 
