--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,11 +19,11 @@
 
 /*Set the flexboxes and min heights so that elements can takeup all the space!*/
 header {
-  @apply bg-blue-500 h-screen flex flex-col justify-between p-12 sticky top-0 float-left max-w-2/5 w-2/5 phonesize:w-full phonesize:max-w-full phonesize:relative;
+  @apply bg-blue-500 h-screen flex flex-col justify-between p-12 sticky top-0 float-left max-w-2/5 w-2/5 mobilesize:w-full mobilesize:max-w-full mobilesize:relative;
 }
 
 main {
-  @apply flex-grow flex flex-col justify-around p-12 max-w-3/5 w-3/5 phonesize:w-full phonesize:max-w-full;
+  @apply flex-grow flex flex-col justify-around p-12 max-w-3/5 w-3/5 mobilesize:w-full mobilesize:max-w-full;
 }
 
 h1 {
@@ -41,6 +41,10 @@ h3 {
 
 .hover-button {
   @apply row-start-1 p-4 rounded transition ease-in-out delay-150 bg-transparent hover:-translate-y-1 hover:scale-100 hover:bg-violet-400 duration-300;
+}
+
+.ext-text-link {
+  @apply text-slate-300 hover:text-sky-400 hover:underline
 }
 
 
