added skills to cards. Made the strings for the html tags consistent

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,6 +47,10 @@ h3 {
   @apply text-slate-300 hover:text-sky-400 hover:underline
 }
 
+.int-text-link {
+  @apply hover:text-violet-400 hover:underline;
+}
+
 
 @layer utilities {
   .text-balance {
