--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,13 +13,14 @@
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
+    @apply text-white
   }
 }
 
 
 /*Set the flexboxes and min heights so that elements can takeup all the space!*/
 header {
-  @apply bg-blue-500 h-screen flex flex-col justify-between p-12 sticky top-0 float-left max-w-2/5 w-2/5 mobilesize:w-full mobilesize:max-w-full mobilesize:relative;
+  @apply h-screen flex flex-col justify-between p-12 sticky top-0 float-left max-w-2/5 w-2/5 mobilesize:w-full mobilesize:max-w-full mobilesize:relative;
 }
 
 main {
@@ -38,17 +39,21 @@ h3 {
   @apply text-xl font-medium;
 }
 
+hr {
+  @apply h-px dark:bg-gray-200 border-0 bg-gray-700;
+}
+
 
 .hover-button {
   @apply row-start-1 p-4 rounded transition ease-in-out delay-150 bg-transparent hover:-translate-y-1 hover:scale-100 hover:bg-violet-400 duration-300 hover:fill-orange-400;
 }
 
 .ext-text-link {
-  @apply text-slate-300 hover:text-sky-400 hover:underline
+  @apply text-fuchsia-700 hover:text-sky-400 dark:text-orange-200  hover:underline
 }
 
 .int-text-link {
-  @apply hover:text-violet-400 hover:underline;
+  @apply hover:text-orange-400 hover:underline;
 }
 
 
